# meshstellar

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Containerfile  Containerfile-arm64.github  Containerfile.crosscompile  Containerfile.github  LICENSE  README.md  build.rs  docker-compose.yml.example  meshstellar.toml.example  rust-toolchain.toml
.github/workflows/: build.yml
migrations/: 20240407082700_initial_schema.sql  20240417173424_new_telemetry_fields.sql  20240419110911_add_more_indices.sql  20240422180400_node_hop_fields.sql  20240518134228_add_power_metrics.sql  20240518142256_add_duplicate_packet_marker_to_mesh_packets.sql  20240518145321_fix_iaq_naming.sql  20240607195921_add_updated_at_to_nodes.sql  20250111083857_update_schema_with_nullability_for_processed_packets.sql  20250111101205_add_received_at_to_mesh_packets.sql  20250112195449_fix_environment_metrics.sql  20250831092014_add_public_key_and_is_unmessagable_to_node_info.sql
script/: build
src/: import.rs  main.rs  mqtt_processor.rs  template.rs  web_interface.rs
src/dto/: device_metrics_select_result.rs  environment_metrics_select_result.rs  gateway_packet_info.rs  mesh_packet.rs  mod.rs  neighbor_select_result.rs  node_select_result.rs  plot_data.rs  position_select_result.rs  power_metrics_select_result.rs  returning_id.rs  routing_dto.rs  service_envelope_select_result.rs  stats_select_result.rs  trace_route_dto.rs  waypoint_select_result.rs
src/proto/: meshtastic.rs  mod.rs
src/util/: config.rs  database_error.rs  mod.rs  plot.rs  static_file.rs  template.rs  windows.rs
static/: application.css  application.js  light.json  maplibre-gl.css  pmtiles.min.js  sse.min.js
templates/: _node.html  _node_details.html  _packet.html  _packet_details.html  _position_details.html  _stats.html  index.html  layout.html
