[package]
name = "meshstellar"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
prost = "0.14"
chrono = { version = "0.4.37", features = ["clock"], default-features = false }
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "process"] }
axum = { version = "0.8", features = ["macros", "tracing", "tokio", "http1", "tower-log", "query"], default-features = false }
rust-embed = { version = "8.3", features = ["interpolate-folder-path"] }
mime_guess = "2.0.4"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.18"
askama = { version = "0.14.0" }
tower-http = { version = "0.6.6", features = ["trace", "compression-gzip"] }
tokio-stream = "0.1.15"
async-stream = "0.3.5"
blake3 = "1.5.1"
rumqttc = "0.24.0"
itertools = "0.14.0"
config = { version = "0.15.4", default-features = false, features = ["convert_case", "toml", "convert-case"] }
serde_json = "1.0.143"
geojson = { version = "0.24.1", default-features = false }
thiserror = "2.0.16"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
futures = { version = "0.3.31", default-features = false }
plotters = { version = "0.3.5", default-features = false, features = ["chrono", "svg_backend", "plotters-svg", "line_series", "point_series"] }
dirs = "6"
serde = "1.0.202"
num-traits = "0.2.19"
url = "2.5.7"
base64 = "0.22.1"
aes = "0.8.4"
ctr = "0.9.2"

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = ["build", "cargo", "rustc"] }
prost-build = { version = "0.14" }
glob = "0.3"
regex = "1"
anyhow = "1"
flate2 = "1"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
panic = "abort"

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true

[lints.rust]
warnings = "deny"
